Fix text align

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,6 +13,7 @@
       color: white;
       font-family: "Segoe UI";
       font-size: 50px;
+      text-align: center;
     }
     .port-home-linkLogo{
       background-image: url("./../assets/logos/linkdedin.png");
